Make sure css works and align with loket

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,23 +1,97 @@
-@import 'ember-power-select';
+/* ==================================
+   #APPUNIVERSUM
+   ================================== */
+
+/**
+ * A design universe for Flanders GOV applications
+ */
+
+/**
+ * CONTENTS
+ * ---
+ * SETTINGS: Project settings and variables
+ * TOOLS: Mixins
+ * GENERIC: Reset, global box-sizing and font-styles
+ * ELEMENTS: Plain html tag styling
+ * OBJECTS: OOCSS unstyled objects (namespace: '.au-o-...')
+ * COMPONENTS: Components (namespace: '.au-c-...')
+ * UTILITIES: Single function helper classes (namespace: '.au-u-...')
+ * SHAME: Temporary hacks and quickfixes
+ */
+
+
+// VARIABLES
+@import "appuniversum/s-colors";
+@import "appuniversum/s-global";
+@import "appuniversum/s-utilities";
+
+
+// PROJECT SPECIFIC VARIABLES
+@import 'project/print';
+
+
+// MIXINS
+@import "appuniversum/t-font-size";
+@import "appuniversum/t-sass-mq";
+
+
+// GENERIC
+@import "appuniversum/g-reset";
+@import "appuniversum/g-box-sizing";
+@import "appuniversum/g-font";
+
+
+// ELEMENTS
+@import "appuniversum/e-page";
+
+
+// OBJECTS
+@import "appuniversum/o-box";
+@import "appuniversum/o-grid";
+@import "appuniversum/o-layout";
+@import "appuniversum/o-region";
+
+
+// WU COMPONENTS (DEPRECATED)
 @import 'ember-vo-webuniversum-data-table';
+@import 'ember-power-select';
 @import 'ember-vo-webuniversum';
 
-@import 'print';
-@import 'document-status-pills';
-@import 'form-fields';
+// CUSTOM COMPONENTS (DEPRECATED)
+@import 'deprecated/document-status-pills';
+@import 'deprecated/form-fields';
 
-/* ==========================================================================
-  Style power select sizes
- ========================================================================== */
+// COMPONENTS
+@import "ember-appuniversum/c-alert";
+@import "ember-appuniversum/c-brand";
+@import "ember-appuniversum/c-button";
+@import "ember-appuniversum/c-help-text";
+@import "ember-appuniversum/c-input";
+@import "ember-appuniversum/c-label";
+@import "ember-appuniversum/c-link";
+@import "ember-appuniversum/c-icon";
+@import "ember-appuniversum/c-list-horizontal";
+@import "ember-appuniversum/c-list-navigation";
+@import "ember-appuniversum/c-pill";
+@import "ember-appuniversum/c-dropdown";
+@import "ember-appuniversum/c-main-header";
+@import "ember-appuniversum/c-main-container";
+@import "ember-appuniversum/c-sidebar";
+@import "ember-appuniversum/c-textarea";
+@import "ember-appuniversum/c-toolbar";
 
-.ember-power-select--small .ember-power-select-trigger {
-	font-size: 1.4rem;
-	height: 3rem;
-	line-height: 2;
-	padding-left: 0.5rem;
-} // remove when webunversum is updated
+// // UTILITIES
+@import "appuniversum/u-align-text";
+@import "appuniversum/u-font-weights";
+@import "appuniversum/u-font-family";
+@import "appuniversum/u-headings";
+@import "appuniversum/u-hide";
+@import "appuniversum/u-print";
+@import "appuniversum/u-responsive-spacings";
+@import "appuniversum/u-spacings";
+@import "appuniversum/u-visible";
+@import "appuniversum/u-widths";
 
-.ember-power-select-option {
-	line-height: 2.2rem;
-	padding: 1rem 0 1rem 3rem;
-} // remove when webunversum is updated
+
+// TEMPORARY HACKS AND QUICKFIXES
+@import 'shame';
