--- a/app/styles/project/_print.scss
+++ b/app/styles/project/_print.scss
@@ -10,7 +10,7 @@
 	}
 
 	.pill {
-		border-right: 1px solid $blue-gray-light;
+		border-right: 1px solid $au-gray-200;
 	}
 
 	.u-wide-on-print {
